# Compiler-Cpm

./: .gitignore  README.md  init_compiler  initializer.ps1  initializer.sh
Compiler/: CMakeLists.txt
Compiler/AST/: ast_nodes.cpp  ast_nodes.h
Compiler/compiler/: compiler.cpp  compiler.h  lexer.h  main.cpp
Compiler/helpers/: char_source.cpp  char_source.h  command_pipe.h  compile_exception.h  lib.h  mixed.h  parse_exception.h  pipe.h  token.h  token_pipe.h
Compiler/src/: compiler.cpp  compiler.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  translator.cpp  translator.h
Compiler/tests/: tests.cmake
Compiler/tests/cpp/ast/: ast-tests.cmake  simple-ast-tests.cpp
